<resources>
    <string name="app_name">E_LearningSimple</string>
    <string name="action_settings">Settings</string>
    <string name="title_login">Login</string>
    <string name="hint_email_input">Email</string>
    <string name="hint_password_input">Password</string>
    <string name="hint_password_confirm">Password confirmation</string>
    <string name="label_login">Login</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="fullname">Full name</string>
    <string name="avatar">Avatar</string>
    <string name="hint_fullname">Full name</string>
    <string name="pass_confirm">Password Confirmation</string>
    <string name="label_link_register"><u>Create new account</u></string>
    <string name="label_words">Words</string>
    <string name="label_profile">PROFILE</string>
    <string name="description_ur_avatar">User\'s avatar</string>
    <string name="label_lessons">Lessons</string>
    <string name="app_full_name">Register</string>
    <string name="label_update">UD</string>
    <string name="msg_wait">Please waiting...</string>
    <string name="bad_request">Bad request</string>
    <string name="error_unauthorized">Unauthorized!</string>
    <string name="error_server_not_found">Server not found!</string>
    <string name="error_internal_server_error">Internal server error!</string>
    <string name="error_unknown">Something went wrong! Please try again later!</string>
    <string name="error_response_data">Error response data!</string>
    <string name="msg_no_internet">No internet!</string>
    <string name="error_name_short">Name is too short!</string>
    <string name="network_ok">OK</string>
    <string name="error_name_blank">Name can not blank!</string>
    <string name="error_email_short">Email is too short!</string>
    <string name="error_email_blank">Email can not blank!</string>
    <string name="error_password_blank">Password can not blank!</string>
    <string name="error_repassword_blank">Password can not blank!</string>
    <string name="error_email_invalid">Invalid email!</string>
    <string name="error_password_short">Password is too short!</string>
    <string name="error_repassword_not_match">Password is not match to password confirmation</string>
    <string name="dialog_register_fail">Register fail</string>
    <string name="dialog_register_success">Register success</string>
    <string name="label_choose_category">Choose the category ...</string>
    <string name="num_of_words_learned">Number of words learned</string>
    <string name="label_start_lesson">Start lesson</string>
    <string name="default_lesson_name">Uknown lesson</string>
    <string name="default_category_name">Unknow category name</string>
    <string name="ok">OK</string>
    <string name="exit">Do you want to close app?</string>
    <string name="logout">Log out</string>
    <string name="hide">Hide</string>
    <string name="word_list">Word List</string>
    <string name="unknow_answer">Unknow answer</string>
    <string name="no_category_found">No category found</string>
    <string name="key_all_word">All</string>
    <string name="key_learned">Learned</string>
    <string name="key_not_learned">Not learned</string>
    <string name="not_answered">Not answered</string>
    <string name="label_question">Question \#</string>
    <string name="error_cannot_save_result">Cannot save result</string>
    <string name="label_result">Result</string>
    <string name="label_lesson_results">Your lessons\' result</string>
    <string name="submit">Submit</string>
</resources>