<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_text"
        android:background="@color/header"
        android:gravity="center"
        android:text="@string/label_profile"
        android:textColor="@color/white"
        android:textSize="@dimen/textview_textsize"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_linear"
        android:background="@drawable/border"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="100">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/image_avatar"
            android:layout_width="@dimen/layout_width_circleimageview"
            android:layout_height="@dimen/layout_height_circleimageview"
            android:layout_weight="35"
            app:civ_border_color="@color/bg_blue"
            app:civ_border_width="@dimen/civ_border_width" />

        <LinearLayout
            android:layout_width="@dimen/layout_width_circleimageview"
            android:layout_height="wrap_content"
            android:layout_weight="65"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/layout_width_image"
                    android:layout_height="@dimen/layout_height_image"
                    android:src="@mipmap/ic_user" />

                <TextView
                    android:id="@+id/text_current_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:gravity="bottom"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/ic_email_blue" />

                <TextView
                    android:id="@+id/text_current_user_email"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/text_current_user_email"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:gravity="bottom"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/layout_width_image"
                    android:layout_height="@dimen/layout_height_image"
                    android:contentDescription="@string/description_ur_avatar"
                    android:src="@mipmap/ic_file" />

                <TextView
                    android:id="@+id/text_current_learned_words"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/layout_height_image"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:layout_marginStart="@dimen/margin_left"
                    android:gravity="bottom"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/btn_update_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginEnd="@dimen/margin_left"
                android:layout_marginRight="@dimen/margin_left"
                android:background="@color/white"
                android:src="@mipmap/ic_edit" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout_action_btns"
            style="?android:buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_linear"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btn_words"
                style="?android:buttonBarButtonStyle"
                android:layout_width="@dimen/width_button"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_left"
                android:background="@drawable/button_selector"
                android:text="@string/label_words"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_lessons"
                style="?android:buttonBarButtonStyle"
                android:layout_width="@dimen/width_button"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_left"
                android:background="@drawable/button_selector"
                android:text="@string/label_lessons"
                android:textColor="@color/white" />
        </LinearLayout>

        <ListView
            android:id="@+id/list_activities"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/layout_action_btns"
            android:layout_marginLeft="@dimen/layout_marginLeft"
            android:layout_marginRight="@dimen/layout_marginRight"
            android:layout_marginTop="@dimen/margin_left"></ListView>
    </RelativeLayout>
</LinearLayout>
